0.3.4, WIP:
  - ASTRA plugin:
    - rewrote .read_states() to accomodate for any zphase (simple trick)
    - added warning to helptext about .clean() possibly overwriting unsaved runfiles

  - Tracking presets:
    - default now takes beam states every 0.01 m, assuming field 2 m wide @ z = 1m (particles immediately fly into the field);
      track 1 m afterwards, i.e. focal length of up to 2 m

  - track module:
    - .process_states() now adds dphi information (relative to starting beam state ("turn") and to the previous state ("dphi")) to each state
    - .process_states() now adds z, pz and t from reference particles to the rest, eliminating the need for a separate "refs" object

  - core module:
    - added numerical field integration, based on Simpsons' method. F3 is bad - "second derivative" from slopes 0.1-1 mm steps is, well, bad.
    - Renamed calc.py into core.py, for less confusion

  - General:
    - Added some code to wrapper to streamline binding various modules to each other; since nothing will invoke the backend going around the interfaces (wrapper, at least),
      it is safe to not declare these connections explicitly and use "undefined" objects in backend code.


0.3.3, 15.09.20:
  - General:
    - separated demos and BA-relevant routines; I want to make a clear distinction between solensim and my thesis work.

  - ASTRA plugin:
    - renamed .get_field() to .read_field()
    - introduced .field field - .read_field() now also stores the field aside from returning z, Bz,
        and write_field analogously writes it to astra.field
    - expanded helptext to describe the handle's data fields
    - fixed read_zemit and trajectories not working (kek blunder)
    - temporarily disabled read_zemit, because no clue what the numbers mean, yet
    - .read_screens rewritten as .read_states - not dependent on runfile, flexible (regex & dataframes), and with initial beam state as well
    - added .read_last to only grab the first and last beam states only