@@ -1,6 +1,6 @@
 0.3.4, WIP:
   - ASTRA plugin:
-    - rewrote .read_states() to accomodate for any zphase (simple trick)
+    - rewrote .read_states() to accomodate for any zphase (simple trick);
     - added warning to helptext about .clean() possibly overwriting unsaved runfiles
 
   - Tracking presets:
@@ -8,8 +8,11 @@
       track 1 m afterwards, i.e. focal length of up to 2 m
 
   - track module:
+    - rewrote .process_states() to be slightly faster
     - .process_states() now adds dphi information (relative to starting beam state ("turn") and to the previous state ("dphi")) to each state
     - .process_states() now adds z, pz and t from reference particles to the rest, eliminating the need for a separate "refs" object
+    - added make_heads() that gets some general statistics for individual states
+
 
   - core module:
     - added numerical field integration, based on Simpsons' method. F3 is bad - "second derivative" from slopes 0.1-1 mm steps is, well, bad.
@@ -18,6 +21,7 @@
   - General:
     - Added some code to wrapper to streamline binding various modules to each other; since nothing will invoke the backend going around the interfaces (wrapper, at least),
       it is safe to not declare these connections explicitly and use "undefined" objects in backend code.
+    - import pandas by default, it's as useful as plt or np
 
 
 0.3.3, 15.09.20:
